@@ -18,11 +18,13 @@
  */
 package org.apache.tinkerpop.gremlin.process.remote;
 
+import org.apache.commons.configuration.Configuration;
 import org.apache.tinkerpop.gremlin.process.remote.traversal.RemoteTraversal;
 import org.apache.tinkerpop.gremlin.process.traversal.Bytecode;
 import org.apache.tinkerpop.gremlin.process.traversal.Traversal;
 import org.apache.tinkerpop.gremlin.process.traversal.Traverser;
 
+import java.lang.reflect.Constructor;
 import java.util.Iterator;
 import java.util.concurrent.CompletableFuture;
 
@@ -36,6 +38,9 @@ import java.util.concurrent.CompletableFuture;
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
 public interface RemoteConnection extends AutoCloseable {
+
+    public static final String GREMLIN_REMOTE = "gremlin.remote.";
+    public static final String GREMLIN_REMOTE_CONNECTION_CLASS = GREMLIN_REMOTE + "remoteConnectionClass";
 
     /**
      * @deprecated As of release 3.2.2, replaced by {@link #submitAsync(Bytecode)}.
@@ -73,5 +78,24 @@ public interface RemoteConnection extends AutoCloseable {
             promise.completeExceptionally(t);
         }
         return promise;
+    }
+
+    /**
+     * Create a {@link RemoteConnection} from a {@code Configuration} object. The configuration must contain a
+     * {@code gremlin.remote.remoteConnectionClass} key which is the fully qualified class name of a
+     * {@link RemoteConnection} class.
+     */
+    public static RemoteConnection from(final Configuration conf) {
+        if (!conf.containsKey(RemoteConnection.GREMLIN_REMOTE_CONNECTION_CLASS))
+            throw new IllegalArgumentException("Configuration must contain the '" + GREMLIN_REMOTE_CONNECTION_CLASS + "' key");
+
+        try {
+            final Class<? extends RemoteConnection> clazz = Class.forName(
+                    conf.getString(GREMLIN_REMOTE_CONNECTION_CLASS)).asSubclass(RemoteConnection.class);
+            final Constructor<? extends RemoteConnection> ctor = clazz.getConstructor(Configuration.class);
+            return ctor.newInstance(conf);
+        } catch (Exception ex) {
+            throw new IllegalStateException(ex);
+        }
     }
 }
